--- a/picostack/templates/header.html
+++ b/picostack/templates/header.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -8,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" style="font-family: monospace;" href="#"><img src="{% static "i/picostk.svg"%}" style="margin-right: 10px; margin-top: -3px;"><strong>picostack</strong></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
