modified:   picostack/templates/header.html - Added admin menu - Added help menu with (about, and github project page stubs) modified:   picostack/templates/instances.html - Set correct title.

--- a/picostack/templates/instances.html
+++ b/picostack/templates/instances.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}My amazing blog{% endblock %}
+{% block title %}manage instances{% endblock %}
 
 {% load bootstrap3 %}
 {% block content %}
