modified:   picostack/templates/instances.html - Added form.id to fix the problem of multikeyerror. - Named each action button, so that the corresponding action can be idetified   and handled by the views.py modified:   picostack/vm_manager.py - Corrected number of cores for running kvm command. modified:   picostack/vms/models.py - disk_filename is now not a property but a db field. Disk files should not be   renamed. One should be able to test this for uniqueness. VM renaming still   leaves the problem of uniqeness of disk filenames on the filesystem. - custom VmInstance.save() method now set defaults value with   self.get_default_disk_filename modified:   picostack/vms/views.py - Handling actions for save/start/terminate/trash buttons.

--- a/picostack/templates/instances.html
+++ b/picostack/templates/instances.html
@@ -13,7 +13,7 @@
 		
   	    {% if formset.total_form_count > 0 %}
 
-			<form action="/instances/" method="post" class="form">
+			<form id='instancesform' action="/instances/" method="post" class="form">
 			{{ formset.management_form }}
 	    	<table class="table table-striped">
 		    	<thead>
@@ -26,24 +26,26 @@
 		    	</thead>
 		    	<tbody>
 		        {% for form in formset %}
-		        	<tr>
-		        	
+
+				    {{ form.id }}
+		        		        	
 				    {% csrf_token %}  
 
-				    {% for field in form.visible_fields %}
+		        	<tr>
+				    {% for field in form.visible_fields %}					
 		            	<td> {{ field }} </td>
 		        	{% endfor %}
 		        		<td>
-		        			<button name="_save" type="submit" class="btn btn-default">
+		        			<button name="_save" type="submit" class="btn btn-default" value="save-{{ form.id.value }}">
 					            Save
 					        </button>
-					        <button name="_start" type="submit" class="btn btn-primary">
+					        <button name="_start" type="submit" class="btn btn-primary" value="start-{{ form.id.value }}">
 					            Start
 					        </button>
-							<button name="_stop" type="submit" class="btn btn-warning">
+							<button name="_stop" type="submit" class="btn btn-warning" value="stop-{{ form.id.value }}">
 					            Stop
 					        </button>				        
-					        <button name="_trash" type="submit" class="btn btn-danger">
+					        <button name="_trash" type="submit" class="btn btn-danger" value="trash-{{ form.id.value }}">
 					            Trash
 					        </button>
 				        </td>
@@ -53,6 +55,13 @@
 		        </tbody>
 	    	</table>
 			</form>
+
+			<script type="text/javascript"> <!--
+            $(function() {
+               $('#instancesform tbody tr').formset();
+            })
+       		--></script>
+
 
 		{% else %}
 
