modified:   picostack/process_spawn.py - reimplemented the pifile locking. Now the lock class is instanced inside the   forked process. See fork_parent. modified:   picostack/settings.py modified:   picostack/templates/instances.html - Added page refresh every 4 sec using javascript. modified:   picostack/templates/layout.html - Added new block - a placeholder for javascript at the bottom. modified:   picostack/vm_manager.py - Added kill_all_machines() into interface of vm manager. - modified:   picostk - Implemented a new command called 'clean all' for state cleaning (incl. logs   and pids). modified:   setup.py - Added dependency n psutil.

--- a/picostack/templates/layout.html
+++ b/picostack/templates/layout.html
@@ -31,5 +31,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
     {% bootstrap_javascript %}    
+    {% block bottomjs %}     
+    {% endblock %}
   </body>
 </html>
