--- a/picostack/templates/instances.html
+++ b/picostack/templates/instances.html
@@ -56,11 +56,9 @@
 	    	</table>
 			</form>
 
-			<script type="text/javascript"> <!--
-            $(function() {
-               $('#instancesform tbody tr').formset();
-            })
-       		--></script>
+	
+			
+
 
 
 		{% else %}
@@ -75,4 +73,17 @@
 	</div>
 </div>
 
+{% endblock %}
+
+
+{% block bottomjs %}
+<script type="text/javascript"> <!--
+	// jQuery( document ).ready(function( $ ) {
+	//    $('#instancesform tbody tr').formset();
+	// });
+	// refresh page every 10 sec.
+	setInterval(function(){
+		location.reload();
+	}, 4000);
+--></script>
 {% endblock %}
