modified:   picostack/templates/header.html - Cleaned up example code. modified:   picostack/templates/instances/list.html modified:   picostack/templates/instances/view.html modified:   picostack/urls.py - Finished implementation of splitting 'list' and 'view' of instances. - This allowed doing of AJAX request and nice page refresh of VM statuses.   Refresh is done every 5 sec. Hovering mouse over the form blocks the refresh   timer. modified:   picostack/vms/views.py - Rearranged code into shared functions. Implemented form listing view for AJAX.

--- a/picostack/templates/instances/list.html
+++ b/picostack/templates/instances/list.html
@@ -1,3 +1,5 @@
+{% load bootstrap3 %}
+
 {% if formset.total_form_count > 0 %}
 
 	<form id='instancesform' action="/instances/" method="post" class="form">
@@ -45,7 +47,8 @@
 
 
 	
-
+	<div><button id="refreshInstancesButton" class="btn btn-success">Refresh</button></div>
+	  	</div>
 
 
 {% else %}
