--- a/picostack/templates/header.html
+++ b/picostack/templates/header.html
@@ -16,27 +16,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Instances</a></li>
-        <!--<li><a href="#">Link</a></li>
-         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li> -->
+        <li class="active"><a href="/instances">Instances</a></li>
       </ul>
-      <!-- <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>-->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/logout">Logout</a></li>
         <li><a href="/admin">Admin</a></li>
@@ -45,8 +26,6 @@
           <ul class="dropdown-menu">
             <li><a href="https://github.com/ewiger/picostack">GitHub</a></li>
             <li><a href="#aboutModal" data-toggle="modal" data-target="#aboutModal">About</a></li>
-            <!-- <li class="divider"></li>
-            <li><a href="#">Separated link</a></li> -->
           </ul>
         </li>
       </ul>
