--- a/picostack/templates/instances/list.html
+++ b/picostack/templates/instances/list.html
@@ -37,7 +37,7 @@
 			        <button name="_trash" type="submit" class="btn btn-danger" value="trash-{{ form.id.value }}">
 			            Trash
 			        </button>			        
-			        <button type="button" class="btn btn-default btn-lg" data-toggle="popover" data-placement="bottom" data-title="How to connect" data-container="body" data-html="true" data-content="1) Run this command in your terminal: &lt;br&gt; &lt;strong&gt;bash&nbsp;<(curl&nbsp;-s&nbsp;'{{ connect_url }}?name={{ form.name.value }}')&lt;/strong&gt; &lt;br&gt;&lt;br&gt;2) Now connect to one of the ports below:&lt;br&gt;&lt;i&gt;SSH port: {{ form.instance.ssh_mapping|default:"none" }} | RDP port: {{ form.instance.rdp_mapping|default:"none" }} | VNC port: {{ form.instance.vnc_mapping|default:"none" }}&lt;/i&gt;">
+			        <button type="button" class="btn btn-default btn-lg" data-toggle="popover" data-placement="bottom" data-title="How to connect" data-container="body" data-html="true" data-content="1) Run this command in your terminal: &lt;br&gt; &lt;strong&gt;$(curl&nbsp;-s&nbsp;'{{ connect_url }}?name={{ form.name.value }}')&lt;/strong&gt; &lt;br&gt;&lt;br&gt;2) Now connect to one of the ports below:&lt;br&gt;&lt;i&gt;SSH port: {{ form.instance.ssh_mapping|default:"none" }} | RDP port: {{ form.instance.rdp_mapping|default:"none" }} | VNC port: {{ form.instance.vnc_mapping|default:"none" }}&lt;/i&gt;">
   						<span class="glyphicon glyphicon-log-in"></span>
 					</button>
 		        </td>
