--- a/picostack/templates/instances/list.html
+++ b/picostack/templates/instances/list.html
@@ -14,7 +14,7 @@
     		</tr>
     	</thead>
     	<tbody>
-        {% for form in formset %}
+        {% for form_num, form in formset.enumerate_forms %}
 
 		    {{ form.id }}
         		        	
@@ -25,16 +25,16 @@
             	<td> {{ field }} </td>
         	{% endfor %}
         		<td>
-        			<button name="_save" type="submit" class="btn btn-default" value="save-{{ form.id.value }}">
+        			<button name="_save" type="submit" class="btn btn-default" value="save-{{ form_num }}">
 			            Save
 			        </button>
-			        <button name="_start" type="submit" class="btn btn-primary" value="start-{{ form.id.value }}">
+			        <button name="_start" type="submit" class="btn btn-primary" value="start-{{ form_num }}">
 			            Start
 			        </button>
-					<button name="_stop" type="submit" class="btn btn-warning" value="stop-{{ form.id.value }}">
+					<button name="_stop" type="submit" class="btn btn-warning" value="stop-{{ form_num }}">
 			            Stop
 			        </button>				        
-			        <button name="_trash" type="submit" class="btn btn-danger" value="trash-{{ form.id.value }}">
+			        <button name="_trash" type="submit" class="btn btn-danger" value="trash-{{ form_num }}">
 			            Trash
 			        </button>			        
 			        <button type="button" class="btn btn-default btn-lg" data-toggle="popover" data-placement="bottom" data-title="How to connect" data-container="body" data-html="true" data-content="1) Run this command in your terminal: &lt;br&gt; &lt;strong&gt;$(curl&nbsp;-s&nbsp;'{{ connect_url }}?name={{ form.name.value }}')&lt;/strong&gt; &lt;br&gt;&lt;br&gt;2) Now connect to one of the ports below:&lt;br&gt;&lt;i&gt;SSH port: {{ form.instance.ssh_mapping|default:"none" }} | RDP port: {{ form.instance.rdp_mapping|default:"none" }} | VNC port: {{ form.instance.vnc_mapping|default:"none" }}&lt;/i&gt;">
