--- a/picostack/templates/instances/list.html
+++ b/picostack/templates/instances/list.html
@@ -1,7 +1,6 @@
 {% load bootstrap3 %}
 
-{% if formset.total_form_count > 0 %}
-
+{% if formset.total_form_count > 0 %}	
 	<form id='instancesform' action="/instances/" method="post" class="form">
 	{{ formset.management_form }}
 	<table class="table table-striped">
@@ -25,7 +24,8 @@
             	<td> {{ field }} </td>
         	{% endfor %}
         		<td>
-        			<button name="_save" type="submit" class="btn btn-default" value="save-{{ form_num }}">
+        			<a href="{{ novnc_url }}{{ form.name.value }}" target="_blank" id="code" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-eye-open"></span></a>
+			        <button name="_save" type="submit" class="btn btn-default" value="save-{{ form_num }}">
 			            Save
 			        </button>
 			        <button name="_start" type="submit" class="btn btn-primary" value="start-{{ form_num }}">
